--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
 02/03/2017:
-chg-01: Updated with new _block nodes from Minetest 0.04.15
+chg-01: Updated with new code and texture for estate door from 0.04.14 default doors mod
 chg-02: Update version to 1.1
